[package]
name = "exonum_bitcoinrpc"
version = "0.5.0"
authors = ["The Exonum Team <exonum@bitfury.com>"]
repository = "https://github.com/exonum/bitcoinrpc"
description = "Bitcoin RPC API client."
license = "Apache-2.0"

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
log = "0.4.0"
exonum_jsonrpc = "0.3.0"
failure = "0.1.1"
failure_derive = "0.1.1"